# better-template

./: .gitignore  README.md  cli.py  index.html  main.py  models.py  pyproject.toml
app/: config.py  database.py  dependencies.py  utilities.py
app/templates/: 401.html  index.html  login.html
modified_files/: models.py
